feature: more data format

--- a/MacBook/optimizer_yolov8_cluster/plot_correlation_separated.ipynb
+++ b/MacBook/optimizer_yolov8_cluster/plot_correlation_separated.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -486,6 +486,8 @@
     }
    ],
    "source": [
+    "# Corr Plot Format 1\n",
+    "\n",
     "for i in range(len(plot_video_names)):\n",
     "\tvideo_name = plot_video_names[i]\n",
     "\tfor j in range(len(omv_videos[0][fpss[0]][0])):\n",
@@ -509,11 +511,230 @@
     "\n",
     "\t\tprint(\"\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FPS: 1\n",
+      "OMV Feature 0 (Left-Top)\n",
+      "Average Corr Among All 4 Videos -0.062\n",
+      "\n",
+      "OMV Feature 1 (Right-Top)\n",
+      "Average Corr Among All 4 Videos -0.067\n",
+      "\n",
+      "OMV Feature 2 (Left-Bottom)\n",
+      "Average Corr Among All 4 Videos -0.064\n",
+      "\n",
+      "OMV Feature 3 (Right-Bottom)\n",
+      "Average Corr Among All 4 Videos -0.067\n",
+      "\n",
+      "OMV Feature 4 (Object-Amount)\n",
+      "Average Corr Among All 4 Videos 0.376\n",
+      "\n",
+      "OMV Feature 5 (Confidence)\n",
+      "Average Corr Among All 4 Videos 0.151\n",
+      "\n",
+      "OMV Feature 6 (IOU)\n",
+      "Average Corr Among All 4 Videos 0.453\n",
+      "\n",
+      "FPS: 2\n",
+      "OMV Feature 0 (Left-Top)\n",
+      "Average Corr Among All 4 Videos -0.023\n",
+      "\n",
+      "OMV Feature 1 (Right-Top)\n",
+      "Average Corr Among All 4 Videos -0.026\n",
+      "\n",
+      "OMV Feature 2 (Left-Bottom)\n",
+      "Average Corr Among All 4 Videos -0.031\n",
+      "\n",
+      "OMV Feature 3 (Right-Bottom)\n",
+      "Average Corr Among All 4 Videos -0.03\n",
+      "\n",
+      "OMV Feature 4 (Object-Amount)\n",
+      "Average Corr Among All 4 Videos 0.383\n",
+      "\n",
+      "OMV Feature 5 (Confidence)\n",
+      "Average Corr Among All 4 Videos 0.186\n",
+      "\n",
+      "OMV Feature 6 (IOU)\n",
+      "Average Corr Among All 4 Videos 0.398\n",
+      "\n",
+      "FPS: 3\n",
+      "OMV Feature 0 (Left-Top)\n",
+      "Average Corr Among All 4 Videos -0.056\n",
+      "\n",
+      "OMV Feature 1 (Right-Top)\n",
+      "Average Corr Among All 4 Videos -0.05\n",
+      "\n",
+      "OMV Feature 2 (Left-Bottom)\n",
+      "Average Corr Among All 4 Videos -0.061\n",
+      "\n",
+      "OMV Feature 3 (Right-Bottom)\n",
+      "Average Corr Among All 4 Videos -0.052\n",
+      "\n",
+      "OMV Feature 4 (Object-Amount)\n",
+      "Average Corr Among All 4 Videos 0.35\n",
+      "\n",
+      "OMV Feature 5 (Confidence)\n",
+      "Average Corr Among All 4 Videos 0.245\n",
+      "\n",
+      "OMV Feature 6 (IOU)\n",
+      "Average Corr Among All 4 Videos 0.29\n",
+      "\n",
+      "FPS: 5\n",
+      "OMV Feature 0 (Left-Top)\n",
+      "Average Corr Among All 4 Videos 0.041\n",
+      "\n",
+      "OMV Feature 1 (Right-Top)\n",
+      "Average Corr Among All 4 Videos 0.054\n",
+      "\n",
+      "OMV Feature 2 (Left-Bottom)\n",
+      "Average Corr Among All 4 Videos 0.04\n",
+      "\n",
+      "OMV Feature 3 (Right-Bottom)\n",
+      "Average Corr Among All 4 Videos 0.054\n",
+      "\n",
+      "OMV Feature 4 (Object-Amount)\n",
+      "Average Corr Among All 4 Videos 0.17\n",
+      "\n",
+      "OMV Feature 5 (Confidence)\n",
+      "Average Corr Among All 4 Videos 0.334\n",
+      "\n",
+      "OMV Feature 6 (IOU)\n",
+      "Average Corr Among All 4 Videos 0.328\n",
+      "\n",
+      "FPS: 6\n",
+      "OMV Feature 0 (Left-Top)\n",
+      "Average Corr Among All 4 Videos 0.076\n",
+      "\n",
+      "OMV Feature 1 (Right-Top)\n",
+      "Average Corr Among All 4 Videos 0.101\n",
+      "\n",
+      "OMV Feature 2 (Left-Bottom)\n",
+      "Average Corr Among All 4 Videos 0.073\n",
+      "\n",
+      "OMV Feature 3 (Right-Bottom)\n",
+      "Average Corr Among All 4 Videos 0.097\n",
+      "\n",
+      "OMV Feature 4 (Object-Amount)\n",
+      "Average Corr Among All 4 Videos 0.105\n",
+      "\n",
+      "OMV Feature 5 (Confidence)\n",
+      "Average Corr Among All 4 Videos 0.385\n",
+      "\n",
+      "OMV Feature 6 (IOU)\n",
+      "Average Corr Among All 4 Videos 0.34\n",
+      "\n",
+      "FPS: 10\n",
+      "OMV Feature 0 (Left-Top)\n",
+      "Average Corr Among All 4 Videos 0.082\n",
+      "\n",
+      "OMV Feature 1 (Right-Top)\n",
+      "Average Corr Among All 4 Videos 0.104\n",
+      "\n",
+      "OMV Feature 2 (Left-Bottom)\n",
+      "Average Corr Among All 4 Videos 0.083\n",
+      "\n",
+      "OMV Feature 3 (Right-Bottom)\n",
+      "Average Corr Among All 4 Videos 0.105\n",
+      "\n",
+      "OMV Feature 4 (Object-Amount)\n",
+      "Average Corr Among All 4 Videos -0.018\n",
+      "\n",
+      "OMV Feature 5 (Confidence)\n",
+      "Average Corr Among All 4 Videos 0.437\n",
+      "\n",
+      "OMV Feature 6 (IOU)\n",
+      "Average Corr Among All 4 Videos 0.24\n",
+      "\n",
+      "FPS: 15\n",
+      "OMV Feature 0 (Left-Top)\n",
+      "Average Corr Among All 4 Videos 0.059\n",
+      "\n",
+      "OMV Feature 1 (Right-Top)\n",
+      "Average Corr Among All 4 Videos 0.08\n",
+      "\n",
+      "OMV Feature 2 (Left-Bottom)\n",
+      "Average Corr Among All 4 Videos 0.06\n",
+      "\n",
+      "OMV Feature 3 (Right-Bottom)\n",
+      "Average Corr Among All 4 Videos 0.08\n",
+      "\n",
+      "OMV Feature 4 (Object-Amount)\n",
+      "Average Corr Among All 4 Videos -0.074\n",
+      "\n",
+      "OMV Feature 5 (Confidence)\n",
+      "Average Corr Among All 4 Videos 0.459\n",
+      "\n",
+      "OMV Feature 6 (IOU)\n",
+      "Average Corr Among All 4 Videos 0.18\n",
+      "\n",
+      "FPS: 30\n",
+      "OMV Feature 0 (Left-Top)\n",
+      "Average Corr Among All 4 Videos 0.067\n",
+      "\n",
+      "OMV Feature 1 (Right-Top)\n",
+      "Average Corr Among All 4 Videos 0.079\n",
+      "\n",
+      "OMV Feature 2 (Left-Bottom)\n",
+      "Average Corr Among All 4 Videos 0.07\n",
+      "\n",
+      "OMV Feature 3 (Right-Bottom)\n",
+      "Average Corr Among All 4 Videos 0.082\n",
+      "\n",
+      "OMV Feature 4 (Object-Amount)\n",
+      "Average Corr Among All 4 Videos -0.109\n",
+      "\n",
+      "OMV Feature 5 (Confidence)\n",
+      "Average Corr Among All 4 Videos 0.483\n",
+      "\n",
+      "OMV Feature 6 (IOU)\n",
+      "Average Corr Among All 4 Videos 0.133\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Corr Plot Format 2\n",
+    "\n",
+    "for k in range(len(fpss)):\n",
+    "\tfps = fpss[k]\n",
+    "\tprint(f\"FPS: {fps}\")\n",
+    "\n",
+    "\tfor j in range(len(omv_videos[0][fpss[0]][0])):\n",
+    "\t\tprint(f\"OMV Feature {j} ({omv_features[j]})\")\n",
+    "\t\tcorr_list = []\n",
+    "\n",
+    "\t\tfor i in range(len(plot_video_names)):\n",
+    "\t\t\tvideo_name = plot_video_names[i]\n",
+    "\t\t\n",
+    "\t\t\tomv_fps = list(np.array(omv_videos[i][fps])[:, j])\n",
+    "\t\t\tacc_fps = list(np.array(acc_videos[i])[:, k])\n",
+    "\n",
+    "\t\t\t# Remove Outliers\n",
+    "\t\t\toutlier_index = [l for l in range(len(omv_fps)) if omv_fps[l] == -1]\n",
+    "\t\t\tomv_fps_clean = filter_list_index(omv_fps, outlier_index)\n",
+    "\t\t\tacc_fps_clean = filter_list_index(acc_fps, outlier_index)\n",
+    "\n",
+    "\t\t\tcorrelation_matrix = np.corrcoef(omv_fps_clean, acc_fps_clean)\n",
+    "\t\t\tcorrelation_coefficient = correlation_matrix[0, 1]\n",
+    "\t\t\tcorr_list.append(correlation_coefficient)\n",
+    "\n",
+    "\t\tprint(f'Average Corr Among All {len(plot_video_names)} Videos {round_float_to_sigfigs(np.average(np.array(corr_list)), 3)}')\n",
+    "\n",
+    "\t\tprint(\"\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "YOLOv8",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -527,7 +748,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
